# rulesetter

./: .gitignore  LICENSE  README.md  genindex.html  index.html  main.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  ruff.toml  rulesetter.algebra.html  rulesetter.html  search.html  searchindex.js
.github/workflows/: ci.yml  docs-ci.yml  publish.yml
_modules/: index.html
_modules/rulesetter/: completion.html  engine.html  rule.html  term.html
_modules/rulesetter/algebra/: group.html  monoid.html
_sources/: index.rst.txt
docs/: conf.py  modules.rst  rulesetter.algebra.rst  rulesetter.rst
rulesetter/: __init__.py  completion.py  engine.py  rule.py  term.py
rulesetter/algebra/: __init__.py  group.py  monoid.py
test/: conftest.py  test_algebra.py  test_completion.py  test_engine.py  test_rule.py  test_term.py
