[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rulesetter"
version = "0.1.0"
description = "symbolic term rewrite system in python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sphinx>=9.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "mypy>=1.0",
    "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["rulesetter"]
